@@ -23,9 +23,13 @@
  */
 package htsjdk.samtools.seekablestream;
 
+import htsjdk.samtools.util.IOUtil;
 import java.io.File;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
+import java.nio.channels.SeekableByteChannel;
+import java.util.function.Function;
 
 /**
  * Singleton class for getting {@link SeekableStream}s from URL/paths
@@ -64,11 +68,27 @@ public class SeekableStreamFactory{
 
     private static class DefaultSeekableStreamFactory implements ISeekableStreamFactory {
 
+        @Override
         public SeekableStream getStreamFor(final URL url) throws IOException {
             return getStreamFor(url.toExternalForm());
         }
 
+        @Override
         public SeekableStream getStreamFor(final String path) throws IOException {
+            return getStreamFor(path, null);
+        }
+
+        /**
+         * The wrapper will only be applied to the stream if the stream is treated as a {@link java.nio.file.Path}
+         *
+         * This currently means any uri with a scheme that is not http, https, ftp, or file will have the wrapper applied to it
+         *
+         * @param path    a uri like String representing a resource to open
+         * @param wrapper a wrapper to apply to the stream allowing direct transformations on the byte stream to be applied
+         */
+        @Override
+        public SeekableStream getStreamFor(final String path,
+                                           Function<SeekableByteChannel, SeekableByteChannel> wrapper) throws IOException {
             // todo -- add support for SeekableBlockInputStream
 
             if (path.startsWith("http:") || path.startsWith("https:")) {
@@ -77,16 +97,27 @@ public class SeekableStreamFactory{
             } else if (path.startsWith("ftp:")) {
                 return new SeekableFTPStream(new URL(path));
             } else if (path.startsWith("file:")) {
-                return new SeekableFileStream(new File(new URL(path).getPath()));
+                try {
+                    // convert to URI in order to obtain a decoded version of the path string suitable
+                    // for use with the File constructor
+                    final String decodedPath = new URI(path).getPath();
+                    return new SeekableFileStream(new File(decodedPath));
+                } catch (java.net.URISyntaxException e) {
+                    throw new IllegalArgumentException(String.format("The input string %s contains a URI scheme but is not a valid URI", path), e);
+                }
+            } else if (IOUtil.hasScheme(path)) {
+                return new SeekablePathStream(IOUtil.getPath(path), wrapper);
             } else {
                 return new SeekableFileStream(new File(path));
             }
         }
 
+        @Override
         public SeekableStream getBufferedStream(SeekableStream stream){
             return getBufferedStream(stream, SeekableBufferedStream.DEFAULT_BUFFER_SIZE);
         }
 
+        @Override
         public SeekableStream getBufferedStream(SeekableStream stream, int bufferSize){
             if (bufferSize == 0) return stream;
             else return new SeekableBufferedStream(stream, bufferSize);
